--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "cssnano": "^5.1.12",
     "postcss": "^8.4.14",
     "postcss-cli": "^10.0.0",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.6"
   },
   "dependencies": {
