--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@tailwindcss/typography": "^0.5.4",
     "autoprefixer": "^10.4.7",
     "cssnano": "^5.1.12",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.18",
     "postcss-cli": "^10.0.0",
+    "postcss-nested": "^6.0.0",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.6"
