added a ton more posts

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ collections:
   posts:
     title: Posts
     output: true
+    permalink: /blog/:title.html
   uploads:
     title: Uploads
     output: true
