--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "tailwindcss": "^3.1.6"
   },
   "dependencies": {
-    "daisyui": "^2.20.0"
+    "daisyui": "^2.20.0",
+    "http-server": "^14.1.1"
   }
 }
